--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 certifi==2024.6.2
 charset-normalizer==3.3.2
+coverage==7.5.3
 CurrencyConverter==0.17.22
+exceptiongroup==1.2.1
 idna==3.7
+iniconfig==2.0.0
+packaging==24.0
+pluggy==1.5.0
+pytest==8.2.2
+pytest-cov==5.0.0
 requests==2.32.3
+tomli==2.0.1
 urllib3==2.2.1
+#pip freeze > requirements.txt
 #pip install -r requirements.txt
